Tests/typing/bad/testfile-unbound-3.jl

struct S a::T end
struct T end
